tests/ui/error-codes/E0454.stderr
error[E0454]: link name must not be empty
  --> $DIR/E0454.rs:1:15
   |
LL | #[link(name = "")] extern "C" {}
   |               ^^ empty link name

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0454`.
