tests/ui/error-codes/E0454.rs
#[link(name = "")] extern "C" {}
//~^ ERROR E0454

fn main() {
}
